# boxer_robot

./: README.md
boxer_base/: CHANGELOG.rst  CMakeLists.txt  package.xml
boxer_base/config/: autonomy_bridge.yaml  cyclone_dds.xml  diagnostic_analyzers.yaml  fleet_bridge.yaml  platform_bridge.yaml
boxer_base/launch/: base.launch  bridge_relays.launch  load_autonomy_params.launch  load_fleet_params.launch  load_platform_params.launch
boxer_base/scripts/: restart-adaptor  start-autonomy-bridge  start-fleet-bridge  start-platform-bridge  start-ros-bridge
boxer_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
boxer_bringup/scripts/: install
boxer_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
