<?xml version="1.0"?>
<package format="2">
  <name>boxer_base</name>
  <version>0.1.4</version>
  <description>Boxer's mobility and sensor base.</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <author email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</author>
  <author email="dniewinski@clearpathrobotics.com">Dave Niewinski</author>
  <author email="efernandez@clearpathrobotics.com">Enrique Fernandez</author>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  <author email="modriscoll@clearpathrobotics.com">Mike O'Driscoll</author>

  <license>BSD</license>

  <url type="website">https://wiki.clearpathrobotics.com/display/BOXER/CPE18+-+BOXER</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boxer_msgs</depend>
  <depend>controller_manager</depend>
  <depend>diagnostic_updater</depend>
  <depend>geometry_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>rosgraph_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>teleop_twist_joy</depend>
  <depend>tf</depend>
  <depend>topic_tools</depend>
  <depend>urdf</depend>

  <exec_depend>boxer_control</exec_depend>
  <exec_depend>boxer_description</exec_depend>
  <exec_depend>clearpath_api</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>interactive_marker_twist_server</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>wireless_watcher</exec_depend>

  <!-- ROS2 Dependencies -->
  <!-- Temporarily disabled while we sort out build-farm issues
  <exec_depend>foxy_ros1_bridge</exec_depend>
  <exec_depend>foxy_ros_base</exec_depend>
  <exec_depend>foxy_rmw_cyclonedds_cpp</exec_depend>
  -->

  <test_depend>roslaunch</test_depend>
  <test_depend>roslint</test_depend>
</package>
