<?xml version="1.0"?>
<package format="2">
  <name>boxer_bringup</name>
  <version>0.1.5</version>
  <description>The boxer_bringup package</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <author email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</author>
  <author email="dniewinski@clearpathrobotics.com">Dave Niewinski</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robot_upstart</exec_depend>
  <exec_depend>boxer_base</exec_depend>

  <export>
  </export>
</package>
